Fixes a bug with overflow: hidden in menu

--- a/app/assets/stylesheets/mbr/header.css.sass
+++ b/app/assets/stylesheets/mbr/header.css.sass
@@ -1,6 +1,8 @@
 .header_menu
   background: white
   padding: 0 1em
+  position: relative
+  z-index: 20
   a
     color: $cyan
     font-weight: 600
